--- a/MultiScale_Agentic_RAG.ipynb
+++ b/MultiScale_Agentic_RAG.ipynb
@@ -81,9 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_model = NVIDIAEmbeddings(model=\"nvidia/nv-embedqa-mistral-7b-v2\")\n",
-    "llm_qa = ChatNVIDIA(model=\"nvidia/llama-3.1-nemotron-70b-instruct\")\n",
-    "llm_retrieval = ChatNVIDIA(model=\"nvidia/llama-3.1-nemotron-70b-instruct\")"
+    "embedding_model = NVIDIAEmbeddings(model=\"nvidia/llama-3.2-nv-embedqa-1b-v2\")\n",
+    "llm_qa = ChatNVIDIA(model=\"meta/llama-3.1-70b-instruct\")\n",
+    "llm_retrieval = ChatNVIDIA(model=\"meta/llama-3.1-70b-instruct\")"
    ]
   },
   {
