--- a/MultiScale_Agentic_RAG.ipynb
+++ b/MultiScale_Agentic_RAG.ipynb
@@ -81,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## IMPORTANT: Check these endpoints are still available at build.nvidia.com \n",
     "embedding_model = NVIDIAEmbeddings(model=\"nvidia/llama-3.2-nv-embedqa-1b-v2\")\n",
     "llm_qa = ChatNVIDIA(model=\"meta/llama-3.1-70b-instruct\")\n",
     "llm_retrieval = ChatNVIDIA(model=\"meta/llama-3.1-70b-instruct\")"
